--- a/sass/03-regions/_header-top.scss
+++ b/sass/03-regions/_header-top.scss
@@ -9,8 +9,9 @@
   }
 
   &__top-inner {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
