--- a/sass/00-abstracts/_mixins.scss
+++ b/sass/00-abstracts/_mixins.scss
@@ -50,19 +50,19 @@ $breakpoints: (
 //   padding: 2rem 0;
 // }
 
-// @mixin bcg-overlay($bgc: map-get($colors, accent), $clr: map-get($colors, white)) {
-//   opacity: 0;
-//   position: fixed;
-//   top: 0;
-//   height: 100%;
-//   width: 100%;
-//   overflow: auto;
-//   z-index: 999;
-//   color: $clr;
-//   background: rgba($bgc, 1.0);
-//   transition: all 0.9s;
-// }
+@mixin bcg-overlay($bgc: map-get($colors, accent), $clr: map-get($colors, white)) {
+  opacity: 0;
+  position: fixed;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  z-index: 999;
+  color: $clr;
+  background: rgba($bgc, 1.0);
+  transition: all 0.9s;
+}
 
-// @mixin card-shadow--hover($clr) {
-//   box-shadow: 2px 5.66px 20px 0px rgba(map-get($colors, $clr), 0.2);
-// }
+@mixin card-shadow--hover($clr) {
+  box-shadow: 2px 5.66px 20px 0px rgba(map-get($colors, $clr), 0.2);
+}
