layout menu and contact-overlay  Changes to be committed: 	modified:   css/styles.css 	modified:   dist/css/styles.css 	modified:   dist/css/styles.css.map 	modified:   html/contact-overlay.html 	new file:   html/content/aanplanten_lei-bomen.html 	new file:   html/content/bedrijven.html 	new file:   html/content/home.html 	new file:   html/content/tuinwerken.html 	modified:   html/head.html 	modified:   html/menu-overlay.html 	modified:   php/index.php 	modified:   sass/00-abstracts/_variables.scss 	modified:   sass/03-regions/_contact-overlay.scss 	modified:   sass/03-regions/_menu-overlay.scss 	new file:   sass/04-components/_branding-overlay.scss 	modified:   sass/04-components/_close-btn.scss 	modified:   sass/04-components/_cookiealert.scss 	modified:   sass/04-components/_index.scss 	new file:   sass/04-components/_phone-btn.scss

--- a/sass/00-abstracts/_variables.scss
+++ b/sass/00-abstracts/_variables.scss
@@ -17,6 +17,7 @@ $colors: (
 // FONTS VARIABLES
 $ff-sans: 'Open Sans', sans-serif;
 $ff-titles: 'Rubik', sans-serif;
+$fw-light: 300;
 $fw-bold: 800;
 $ff-size: 1.6rem;
 
