--- a/sass/04-components/_close-btn.scss
+++ b/sass/04-components/_close-btn.scss
@@ -10,7 +10,7 @@
     &::before,
     &::after {
       height: 1px;
-      background-color: map-get($colors, white);
+      background-color: map-get($colors, black);
       display: inline-block;
       transition: all $trans-speed;
     }
