--- a/sass/04-components/_cookiealert.scss
+++ b/sass/04-components/_cookiealert.scss
@@ -17,6 +17,7 @@
 		color: map-get($colors, white);
 		background: map-get($colors, accent);
 		padding: 2rem;
+		border-top: 1px solid map-get($colors, white);
 
 		& a {
 			text-decoration: none;
