more layout overlay items and footer  Changes to be committed: 	new file:   css/03-regions/-footer.css 	modified:   css/styles.css 	modified:   dist/css/styles.css 	modified:   dist/css/styles.css.map 	new file:   dist/images/content/16.jpg 	modified:   html/contact-overlay.html 	modified:   html/content/home.html 	modified:   html/footer.html 	deleted:    html/index.html 	new file:   images/content/16.jpg 	modified:   php/index.php 	modified:   sass/01-base/_typography.scss 	new file:   sass/03-regions/_content-main.scss 	new file:   sass/03-regions/_footer.scss 	modified:   sass/03-regions/_index.scss 	modified:   sass/04-components/_branding-overlay.scss

--- a/sass/03-regions/_index.scss
+++ b/sass/03-regions/_index.scss
@@ -1,8 +1,10 @@
 // /////////////////////////
-// @@ INDEX
+// @@ INDEX REGIONS 
 // ////////////////////////
 
 @import "header-top";
 @import "branding";
 @import "contact-overlay";
 @import "menu-overlay";
+@import "content-main";
+@import "footer";
