--- a/sass/01-base/_typography.scss
+++ b/sass/01-base/_typography.scss
@@ -35,7 +35,7 @@ h1 {
 
 h2 {
   font: {
-    size: 10vw;
+    size: 9vw;
   }
 
   @include mq(tablet) {
@@ -66,7 +66,8 @@ strong {
 }
 
 .heading-two {
-  color: map-get($colors, accent-two);
+  color: map-get($colors, accent);
+  text-transform: uppercase;;
 
   &--light {
     color: map-get($colors, bcg-clr);
