footer copyrights and few litle things  Changes to be committed: 	modified:   css/styles.css 	modified:   dist/css/styles.css 	modified:   dist/css/styles.css.map 	new file:   dist/images/left-image_smaller.jpg 	modified:   html/contact-overlay.html 	modified:   html/footer.html 	new file:   images/left-image_smaller.jpg 	modified:   php/index.php 	modified:   sass/03-regions/_footer.scss 	modified:   sass/03-regions/_index.scss 	new file:   sass/03-regions/_parent-container.scss 	modified:   sass/04-components/_buttons.scss 	modified:   sass/04-components/_contact-btn.scss

--- a/sass/03-regions/_footer.scss
+++ b/sass/03-regions/_footer.scss
@@ -9,4 +9,13 @@
   &__contact {
     text-align: center;
   }
+
+  &__copy {
+    background-color: map-get($colors, accent-two);
+    border-top: 1px solid map-get($colors, white);
+    padding: 1.5rem 3rem;
+    font: {
+      size: 1rem;
+    };
+  }
 }
