--- a/sass/03-regions/_index.scss
+++ b/sass/03-regions/_index.scss
@@ -6,5 +6,6 @@
 @import "branding";
 @import "contact-overlay";
 @import "menu-overlay";
+@import "parent-container";
 @import "content-main";
 @import "footer";
