start media-query  Changes to be committed: 	modified:   css/styles.css 	modified:   dist/css/styles.css 	modified:   dist/css/styles.css.map 	modified:   html/header.html 	modified:   sass/01-base/_base.scss 	modified:   sass/03-regions/_branding.scss

--- a/sass/03-regions/_branding.scss
+++ b/sass/03-regions/_branding.scss
@@ -5,12 +5,13 @@
 .r-header {
 
   &__branding {
-    background-image: url("../images/logo.png");
-    background-repeat: no-repeat;
-    background-size: auto 100%;
-    background-color: map-get($colors, accent-two);
-    padding: 2rem 0;
     margin-bottom: $margin-b;
+
+    @include mq(desktop) {
+      position: fixed;
+      min-height: 100vh;
+      background-image: url("../images/logo_accent-two-clr.png");
+    }
   }
 
 }
@@ -18,8 +19,17 @@
 .r-branding {
 
   &__title {
+    background-image: url("../images/logo.png");
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-color: map-get($colors, accent-two);
+    padding: 2rem 0;
     color: map-get($colors, accent);
-    text-align: center;;
+    text-align: center;
+
+    @include mq(desktop) {
+      
+    }
   }
 
   &__slogan {
