left side desktop-view layout add css-grid  Changes to be committed: 	modified:   css/styles.css 	modified:   dist/css/styles.css 	modified:   dist/css/styles.css.map 	modified:   html/header.html 	modified:   php/index.php 	modified:   sass/01-base/_typography.scss 	modified:   sass/02-layout/_main-layout.scss 	modified:   sass/03-regions/_branding.scss 	renamed:    sass/03-regions/_content-main.scss -> sass/03-regions/_content.scss 	modified:   sass/03-regions/_footer.scss 	new file:   sass/03-regions/_grid-container.scss 	modified:   sass/03-regions/_header-top.scss 	modified:   sass/03-regions/_index.scss 	new file:   sass/03-regions/_main.scss 	modified:   sass/03-regions/_menu-overlay.scss 	deleted:    sass/03-regions/_parent-container.scss 	modified:   sass/styles.scss

--- a/sass/01-base/_typography.scss
+++ b/sass/01-base/_typography.scss
@@ -28,8 +28,8 @@ h1 {
     size: 10vw;
   }
 
-  @include mq(tablet) {
-    font-size: 7vw;
+  @include mq(desktop) {
+    font-size: 4.5vw;
   }
 }
 
@@ -62,7 +62,7 @@ strong {
 }
 
 .heading-one {
-  color: map-get($colors, accent-two);
+  color: map-get($colors, white);
 }
 
 .heading-two {
