--- a/sass/03-regions/_index.scss
+++ b/sass/03-regions/_index.scss
@@ -6,6 +6,7 @@
 @import "branding";
 @import "contact-overlay";
 @import "menu-overlay";
-@import "parent-container";
-@import "content-main";
+@import "grid-container";
+@import "main";
+@import "content";
 @import "footer";
