--- a/sass/03-regions/_menu-overlay.scss
+++ b/sass/03-regions/_menu-overlay.scss
@@ -32,12 +32,12 @@
   &__items {
       list-style-type: none;
 
-      @include mq(desktop) {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 2rem;
+      // @include mq(desktop) {
+      //   display: grid;
+      //   grid-template-columns: repeat(2, 1fr);
+      //   gap: 2rem;
         
-      }
+      // }
   }
 
   &__item {
