--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,6 +6,7 @@
 // Format with BEM
 // o-object-name[<element>|<modifier>] {}
 //
+// Layout: .l
 // Regions: .r
 // Components: .c
 // Content/node: .n
