--- a/sass/03-regions/_header-top.scss
+++ b/sass/03-regions/_header-top.scss
@@ -8,6 +8,13 @@
       height: 5rem;
   }
 
+    @include mq(desktop) {
+      position: fixed;
+      z-index: 5;
+      grid-area: header-top;
+      width: 50vw;
+    }
+
   &__top-inner {
     height: 100%;
     display: flex;
