more config and add content  Changes to be committed: 	new file:   content/404.phtml 	renamed:    content/aanplanten_lei-bomen.html -> content/aanplanten_lei-bomen.phtml 	deleted:    content/bedrijven.html 	new file:   content/bedrijven.phtml 	renamed:    content/home.html -> content/home.phtml 	deleted:    content/tuinwerken.html 	new file:   content/tuinwerken.phtml 	modified:   css/styles.css 	modified:   dist/css/styles.css 	modified:   dist/css/styles.css.map 	deleted:    html/content/aanplanten_lei-bomen.html 	deleted:    html/content/bedrijven.html 	deleted:    html/content/home.html 	deleted:    html/content/tuinwerken.html 	modified:   includes/config.php 	deleted:    includes/contact-overlay.inc.html 	deleted:    includes/cookie-alert.inc.html 	deleted:    includes/footer.inc.html 	modified:   includes/functions.php 	deleted:    includes/head.inc.php 	deleted:    includes/header.inc.html 	deleted:    includes/menu-overlay.inc.html 	modified:   sass/01-base/_typography.scss 	modified:   sass/03-regions/_menu-overlay.scss 	modified:   template/template.php

--- a/sass/03-regions/_menu-overlay.scss
+++ b/sass/03-regions/_menu-overlay.scss
@@ -9,7 +9,7 @@
   @include bcg-overlay(map-get($colors, accent-two), map-get($colors, black));
 
   @include mq(tablet) {
-    width: 80vw;
+    width: 50vw;
   }
   
   &__top {
@@ -32,12 +32,6 @@
   &__items {
       list-style-type: none;
 
-      // @include mq(desktop) {
-      //   display: grid;
-      //   grid-template-columns: repeat(2, 1fr);
-      //   gap: 2rem;
-        
-      // }
   }
 
   &__item {
@@ -52,6 +46,10 @@
   &__link {
     text-decoration: none;
     color: map-get($colors, black);
+  }
+
+  &__active {
+    color: map-get($colors, white);
   }
 
   &__bottom {
