add extra menu for trees and add more content  Changes to be committed: 	modified:   content/404.phtml 	new file:   content/aanplanten-van-bomen-of-leibomen.phtml 	deleted:    content/aanplanten_lei-bomen.phtml 	new file:   content/advies.phtml 	modified:   css/styles.css 	modified:   dist/css/styles.css 	modified:   dist/css/styles.css.map 	new file:   dist/images/triangle.jpg 	new file:   dist/images/triangle.png 	new file:   favicon.ico 	new file:   images/triangle.jpg 	new file:   images/triangle.png 	modified:   includes/config.php 	modified:   includes/functions.php 	modified:   readme.md 	modified:   sass/03-regions/_footer.scss 	modified:   sass/03-regions/_menu-overlay.scss 	modified:   template/template.php

--- a/sass/03-regions/_footer.scss
+++ b/sass/03-regions/_footer.scss
@@ -8,11 +8,17 @@
 
   @include mq(desktop) {
     background-color: transparent;
-    border: 1px solid map-get($colors, accent-two);
+    
   }
 
   &__contact {
     text-align: center;
+
+    @include mq(desktop) {
+      padding: 2rem;
+      text-align: left;
+      border: 1px solid map-get($colors, accent-two);
+    }
   }
 
   &__copy {
