add facebook to footer and footer to bottom  Changes to be committed: 	modified:   content/bedrijven.phtml 	modified:   css/styles.css 	modified:   dist/css/styles.css 	modified:   dist/css/styles.css.map 	modified:   dist/js/all.js 	new file:   js/facebook.js 	modified:   sass/01-base/_base.scss 	modified:   sass/03-regions/_content.scss 	modified:   sass/03-regions/_footer.scss 	modified:   sass/03-regions/_main.scss 	modified:   template/template.php

--- a/content/bedrijven.phtml
+++ b/content/bedrijven.phtml
@@ -1,2 +1,2 @@
-<h2>Bedrijven</h2>
+<h2 class="heading-two">Arbor Service <span>Bedrijven</span></h2>
 <p>Voor bedrijven is het voordeliger om jaarlijks een contract af te sluiten. De tuin, hagen, parking, opritten, … worden dan voor u netjes bijgehouden. U kan zelf beslissen wat u door ons wil laten doen. U kan zich beperken tot enkele onderdelen of alles aan ons overlaten.</p>
