--- a/sass/03-regions/_contact-overlay.scss
+++ b/sass/03-regions/_contact-overlay.scss
@@ -8,6 +8,10 @@
 
 	@include bcg-overlay(map-get($colors, accent), map-get($colors, black));
 
+	&__inner {
+		
+	}
+
 	&__top {
 		display: flex;
 		justify-content: space-between;
